--- a/src/main/java/com/mycompany/usil_pre_2310119/view/FrmRegistarTarea.form
+++ b/src/main/java/com/mycompany/usil_pre_2310119/view/FrmRegistarTarea.form
@@ -155,7 +155,7 @@
           <StringArray count="3">
             <StringItem index="0" value="Pendiente"/>
             <StringItem index="1" value="En progreso"/>
-            <StringItem index="2" value="Compleatada"/>
+            <StringItem index="2" value="Completada"/>
           </StringArray>
         </Property>
       </Properties>
