--- a/src/main/java/com/mycompany/usil_pre_2310119/view/FrmBuscarTarea.form
+++ b/src/main/java/com/mycompany/usil_pre_2310119/view/FrmBuscarTarea.form
@@ -111,10 +111,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="Nombre" type="java.lang.Object"/>
-                <Column editable="true" title="Responsable" type="java.lang.Object"/>
-                <Column editable="true" title="Estado" type="java.lang.Object"/>
-                <Column editable="true" title="Nombre de Proyecto" type="java.lang.Object"/>
+                <Column editable="true" title="Type 1" type="java.lang.Object"/>
+                <Column editable="true" title="Type 2" type="java.lang.Object"/>
+                <Column editable="true" title="Type 3" type="java.lang.Object"/>
+                <Column editable="true" title="Type 4" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
