--- a/src/main/java/com/mycompany/usil_pc1/View/FrmMenuCalorias.form
+++ b/src/main/java/com/mycompany/usil_pc1/View/FrmMenuCalorias.form
@@ -119,11 +119,7 @@
     <Component class="javax.swing.JComboBox" name="jComboBox1">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
-            <StringItem index="0" value="Desayuno"/>
-            <StringItem index="1" value="Almuerzo"/>
-            <StringItem index="2" value="Cena"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
       <Events>
